# San-Jose-Animal-Shelter-Analysis

./: .gitignore  Book1.twb  README.md  eda_summary.md  eval_utils.py  explore.ipynb  interactive.py  model.py  output.txt  preprocess.py  pyproject.toml  regression.py
data/raw/: animalshelterdata_fy2122.csv  animalshelterdata_fy2223.csv  animalshelterdata_fy2324.csv  animalshelterdata_fy2425.csv
data/raw/valid/: animalshelterdata_fy2526.csv
eda/: EDA.twb  eda.py  eda_summary.md
